# TestHarness-UART-Pico-SDK

./: CMakeLists.txt  Readme.md  upload_UART_receiver.sh  upload_UART_sender.sh
UART_receiver/: CMakeLists.txt  Output_115200_baud.txt  Output_230400_baud.txt  Output_460800_baud.txt  Output_460800_baud_FIFO.txt  Output_576000_baud.txt  Output_576000_baud_FIFO.txt  Output_921600_baud.txt  Output_921600_baud_FIFO.txt  Output_921600_baud_crash.txt  Output_921600_baud_crash_2.txt  UART_receiver.c
UART_sender/: CMakeLists.txt  Output_115200_baud.txt  Output_115200_baud_noscroll.txt  Output_230400_baud.txt  Output_230400_baud_errors_noscroll.txt  Output_460800_baud_FIFO.txt  Output_460800_baud_errors1.txt  Output_460800_baud_errors2.txt  Output_460800_baud_errors3.txt  Output_460800_baud_errors_noscroll.txt  Output_460800_baud_nousbserial_errors_noscroll.txt  Output_576000_baud_FIFO.txt  Output_576000_baud_errors.txt  Output_921600_baud_FIFO.txt  Output_921600_baud_FIFO_noscroll.txt  Output_921600_baud_errors.txt  Output_921600_baud_errors_noscroll.txt  Output_921600_baud_nousbserial_errors_noscroll.txt  UART_sender.c
